# SpatialText2SQL

./: .gitignore  HANDOFF.md  README.md  ST_Function.md  method.md  pass.md  pyproject.toml  question.md  requirements.txt
config/: dataset_config.yaml  db_config.yaml  eval_config.yaml  finetune.yaml  finetune_gemma4_full.yaml  finetune_gemma4_lora.yaml  finetune_gemma4_qlora.yaml  migrate.yaml  model_config.yaml  preprocess.yml  quality_control.yaml  question_synthesis.yaml  sql_synthesis.yaml  sql_synthesis_coverage200_smoke.yaml
data/: postgis_extracted.json
docker/: Dockerfile  config.yaml  docker_service.sh
inference_evaluation/: RUN.md  requirements.txt
prompts/: finetune_alpaca.example.txt  finetune_alpaca.txt  question_generation_prompt.txt  question_revision_prompt.txt  sql_revision_prompt.txt  sql_selector_prompt.txt  sql_synthesis_prompt.txt  text2sql_prompt.txt  train_prompt.txt
reference_evaluation/: .gitignore  README.md
scripts/: build_ai_classification_input.py  build_benchmark.py  build_classification_tree.py  build_databases.py  cluster_tables.py  compute_source_dataset_stats.py  compute_source_stats.py  compute_weighted_stats_check.py  crawl_boston_opendata.py  crawl_chicago_opendata.py  crawl_lacity_opendata.py  crawl_phoenix_opendata.py  crawl_seattle_opendata.py  crawl_sf_opendata.py  download_open_data_4cities.py  download_seattle_maps_geojson.py  download_sfgov_maps_geojson.py  download_socrata_map_datasets.py  export_db_blueprints.py  export_sampled_db_graphs_html.py  export_taxonomy_dendrogram.py  export_taxonomy_m2m_for_pg.py  (+5 more)
(+394 files in other folders)
